--- a/Workshop/Views/Home/Index.cshtml
+++ b/Workshop/Views/Home/Index.cshtml
@@ -2,30 +2,21 @@
     ViewBag.Title = "Home Page";
 }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
+@section jumbotron
+{
+    <div class="jumbotron">
+        <h1>SkillTree MVC教學</h1>
+        <p class="lead">利用循序漸進的方式，引導學員完成一個CMS網站，在 SkillTree 的課程中，您學到的不會是最新的技術，而是業界中、實務上可以立即上場的技術，我們希望藉由團對成員多年來開發各式各樣 ASP.NET MVC 的實務經驗中提取適合初學者的實戰經驗與技能。</p>
+        <p><a class="btn btn-lg btn-success" href="http://skilltree.my" role="button">SkillTree官網</a></p>
+    </div>
+}
 
 <div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+    <div class="container">
+        <div class="col-lg-12">
+
+            @Html.Partial("_ListItem")
+            
+        </div>
     </div>
 </div>
