--- a/Workshop/Views/Shared/_Layout.cshtml
+++ b/Workshop/Views/Shared/_Layout.cshtml
@@ -22,6 +22,7 @@
                 <li><a href="@Url.Action("Hot", "Article")">熱門文章</a></li>
                 <li><a href="@Url.Action("List", "Article")">文章列表</a></li>
                 <li><a href="#">RSS</a></li>
+                <li><a href="@Url.Action("Index", new { Area = "Backend", Controller="Home" })">Area_Home_Index</a></li>
             </ul>
             <h3 class="text-muted">SkillTree MVC Sample</h3>
         </div>
